@@ -55,24 +55,13 @@ dependencies {
     defaultsGenerator project(path: ':ignite-runner', configuration: 'defaultsGenerator')
 }
 
-def addOpens = '--add-opens java.base/java.lang=ALL-UNNAMED' +
-        ' --add-opens java.base/java.lang.invoke=ALL-UNNAMED' +
-        ' --add-opens java.base/java.lang.reflect=ALL-UNNAMED' +
-        ' --add-opens java.base/java.io=ALL-UNNAMED' +
-        ' --add-opens java.base/java.nio=ALL-UNNAMED' +
-        ' --add-opens java.base/java.math=ALL-UNNAMED' +
-        ' --add-opens java.base/java.util=ALL-UNNAMED' +
-        ' --add-opens java.base/jdk.internal.misc=ALL-UNNAMED' +
-        ' --add-opens java.base/jdk.internal.access=ALL-UNNAMED' +
-        ' --add-opens java.base/sun.nio.ch=ALL-UNNAMED'
-
 def tokens = [
         PRODUCT_NAME        : 'ignite3db',
         PACKAGE_NAME        : 'ignite3-db',
         PRODUCT_DISPLAY_NAME: 'Apache Ignite',
         APP_JAR             : "${project(':ignite-runner').name}-${project(':ignite-runner').version}.jar".toString(),
         MAIN_CLASS          : 'org.apache.ignite.internal.app.IgniteRunner',
-        ADD_OPENS           : addOpens
+        ADD_OPENS           : project.addOpens.join(' ')
 ]
 
 def tokensLin = tokens + [
@@ -115,8 +104,8 @@ task replaceZipScriptVarsCommon(type: Copy) {
 }
 
 task replaceZipScriptVarsLin(type: Copy) {
-    from "$rootDir/packaging/common/lin"
-    from "$rootDir/packaging/zip/lin"
+    from "$rootDir/packaging/common/linux"
+    from 'zip/linux'
 
     filter(ReplaceTokens, tokens: zipStartScriptTokensLin)
 
@@ -124,8 +113,8 @@ task replaceZipScriptVarsLin(type: Copy) {
 }
 
 task replaceZipScriptVarsWin(type: Copy) {
-    from "$rootDir/packaging/common/win"
-    from "$rootDir/packaging/zip/win"
+    from "$rootDir/packaging/common/windows"
+    from 'zip/windows'
 
     filter(ReplaceTokens, tokens: zipStartScriptTokensWin)
 
@@ -228,9 +217,9 @@ def packageTokens = tokens + tokensLin + [
 
 
 task replacePackageScriptVars(type: Copy) {
-    from "$rootDir/packaging/linux"
-    from "$rootDir/packaging/db/ignite.java.util.logging.properties"
-    from "$rootDir/packaging/common"
+    from 'linux'
+    from 'ignite.java.util.logging.properties'
+    from "$rootDir/packaging/common/linux"
     filter(ReplaceTokens, tokens: packageTokens)
     into "$buildDir/linux"
 }
@@ -282,8 +271,8 @@ ospackage {
 
         into('lib') {
             from configurations.dbArtifacts
-            from "$buildDir/linux/${zipStartScriptTokensCommon.BOOTSTRAP_FILE_NAME}"
-            from "$buildDir/linux/${zipStartScriptTokensCommon.SETUP_JAVA_FILE_NAME}"
+            from "$buildDir/linux/${tokensLin.BOOTSTRAP_FILE_NAME}"
+            from "$buildDir/linux/${tokensLin.SETUP_JAVA_FILE_NAME}"
         }
 
         into('etc') {
@@ -339,19 +328,11 @@ setupBuilder {
 
         jvm = '%JAVA_HOME%\\bin\\server\\jvm.dll'
 
-        javaVMArguments = ["--add-opens=java.base/java.lang=ALL-UNNAMED",
-                           "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-                           "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-                           "--add-opens=java.base/java.io=ALL-UNNAMED",
-                           "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                           "--add-opens=java.base/java.math=ALL-UNNAMED",
-                           "--add-opens=java.base/java.util=ALL-UNNAMED",
-                           "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-                           "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
-                           "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-                           "-Dio.netty.tryReflectionSetAccessible=true",
-                           "-Djava.util.logging.config.file=etc\\ignite.java.util.logging.properties",
-                           "-Dio.netty.tryReflectionSetAccessible=true"]
+        javaVMArguments = project.addOpens + [
+                "-Dio.netty.tryReflectionSetAccessible=true",
+                "-Djava.util.logging.config.file=etc\\ignite.java.util.logging.properties",
+                "-Dio.netty.tryReflectionSetAccessible=true"
+        ]
 
         startArguments = "--node-name node1 --work-dir work --config-path etc\\ignite-config.conf"
     }
